force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/RE_CustomOpps_ReportConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>custom Opps report Configuration setting</description>
    <label>RE_CustomOpps_ReportConfiguration</label>
</CustomObject>