force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_Application__c.field-meta.xml
<CustomField>
    <fullName>RE_Application__c</fullName>
    <label>Application</label>
    <length>10</length>
    <type>Text</type>
</CustomField>