force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>