force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Condition_Type__c</fullName>
    <label>Condition Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>