force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_Condition_Usage_Table__c.field-meta.xml
<CustomField>
    <fullName>RE_Condition_Usage_Table__c</fullName>
    <label>Condition Usage Table</label>
    <length>10</length>
    <type>Text</type>
</CustomField>