force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Country_Name__c</fullName>
    <label>Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>