force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Data_Type__c</fullName>
    <label>Data Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>