force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If active is true ,record will be inserted in Fixed Price Staging Table</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>