force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_Region__c.field-meta.xml
<CustomField>
    <fullName>RE_Region__c</fullName>
    <label>Region</label>
    <length>15</length>
    <type>Text</type>
</CustomField>