force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Unit__c</fullName>
    <label>Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>