force-app/main/default/objects/RE_CustomOpps_ReportConfiguration__c/fields/RE_UoM__c.field-meta.xml
<CustomField>
    <fullName>RE_UoM__c</fullName>
    <label>UoM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>